--- a/chapter_geomorph.tex
+++ b/chapter_geomorph.tex
@@ -4,37 +4,39 @@
 
 \section{Introduction}
 
-Landscape evolution at the catchment scale is punctuated by intense erosive episodes driven by flood events \citep{Wolman1960,newson1980geomorphological,Costa1995} interspersed with periods of relative calm and little geomorphological change. It is these erosive events, driven by intense rainfall in temperate climates, separated by long periods of stasis, that cumulatively sculpt the landscape over geological time. 
+Landscape evolution is punctuated by intense erosive episodes driven by flood events triggered by intense rainfall \citep{Wolman1960,newson1980geomorphological,Costa1995}. Understanding the role rainfall plays in erosional processes is of importance to both long-term landscape evolution studies \citep[e.g.][]{rinaldo1995geomorphological,tucker1997drainage,Tucker2000}, which have long sought effective ways of parameterising rainfall patterns within models \citep[e.g][]{Eagleson1978}.  Catchment sensitivity to rainfall variability is also important in the context of environmental prediction, such as predicting the likely geomorphological impacts of intense rainfall and flash flood events \citep[e.g.][]{lane2007interactions,deluis2010rainfall,milan2012geomorphic}. Given the potential of changing hydro-meteorological conditions that may accompany climate change \citep{Kendon2014}, longer-term prediction of catchment sediment yields and erosion patterns has also seen an increased research effort in recent years \citep{coulthard2000modelling,Coulthard2012,hancock2017sediment}, particularly through the use of numerical landscape evolution models \citep{Tucker2010}.
 
-The importance of these rare but formative events has been revisited by recent work such as \citet{Huang2006}, looking at the long term implications of different geomorphically effective event discharges on fluvial incision; \citep{gupta2007catastrophic,lamb2010rapid,baynes2015erosion} where the amount of bedrock erosion during a single large flood event was quantified. Still, our understanding of catchment scale landscape evolution is far from complete - the role of individual events is highly variable. It has been reported that rapid gorge formation can be driven primarily by small to moderate sized floods \citep{anton2015exceptional}, rather than floods of extreme magnitude. The relationship between flood magnitude and erosion rate is not always observed in case studies (Anton 2012), suggesting that the links between precipitation, hydrological response, and sediment transport are not fully understood. The behaviour of certain catchment processes also exhibits non-linearity in response to external forcings \citep{coulthard1998non,coulthard2007cellular}, which suggests why case studies do not always exhibit a clear scaling relationship between event magnitude and catchment response. The behaviour of streams and rivers within catchments can vary in response to the same magnitude of flood event -- some streams may erode during high flows, whereas others may deposit during high flows \citep{turowski2013large}. During small--medium flows their behaviour is reversed, with some rivers acting as agents of deposition during floods, rather than being primarily erosional.  Catchment-scale erosional dynamics are complex, and except in the simplest cases depend on other forcings other than the magnitude of single flood events alone.  The understanding of hydrogeomorphic processes during single storm events is not only important for the long-term evolution of landscapes, but also for prediction of how catchments will respond to changing hydro-meteorological conditions that may accompany climate change \citep{Kendon2014}.
+Investigation into infrequent but geomorphologically formative flash flooding events has seen a resurgence by recent work such as \citet{Huang2006}, looking at the long-term implications of different geomorphically effective event discharges on fluvial incision. Other studies have sought to quantify the amount of bedrock erosion during individual large flood events \citep[e.g.][]{gupta2007catastrophic,lamb2010rapid,baynes2015erosion}, in an effort to better understand the role that low frequency, but high magnitude events have on landscape evolution. Still, our understanding of catchment-scale landscape evolution is far from complete -- the role that rainfall plays in individual events appears to be highly variable from case-to-case. The behaviour of streams and rivers within catchments can vary in response to the same magnitude of flood event -- some streams may erode during high flows, whereas others may deposit during high flows \citep{turowski2013large}. During small--medium flows \citet{turowski2013large} also report that the behaviour is reversed, with some rivers acting as agents of deposition during floods, rather than being primarily erosional. Further studies have reported that rapid gorge formation can be driven primarily by small to moderate sized floods \citep{anton2015exceptional}, rather than rainfall events of much larger magnitude.
 
- The assumption of uniform rainfall over a river catchment is argued to hold true for small catchments \citep{Solyom2004,Tucker2010}, but even over small areas, mesoscale rainfall features, such as localized convective storm cells, can result in spatially and temporally uneven input of precipitation into the catchment. In the case of intense convective precipitation, individual storm cells can be as small as 10km$^2$ in areal extent  \citep{weisman1986characteristics,vonhardenberg2003shape}. Over larger catchments, or those with steep topographic gradients, precipitation is almost certain to vary spatially, due to orographic enhancement of rainfall \citep{Roe2003}. As such, rainfall-runoff generation, local river and tributary flow, and erosion rates may vary considerably within individual drainage basins. 
- 
-As many geomorphic processes are threshold dependent \citep{schumm1979geomorphic}, such as fluvial incision into bedrock \citep{sklar2001sediment,snyder2003importance}, there is potential for the spatial distribution of rainfall to control local erosion rates within a catchment. Non-linearity in geomorphic process laws \citep{coulthard1998non,phillips2003sources,coulthard2007cellular} should dictate that catchments are also geomorphically sensitive to the spatial distribution of rainfall. 
+Temporal variability in rainfall patterns is shown to control the evolution of landscapes over geological timescales \citep{Tucker2000,Solyom2004}, influencing the geomorphology of drainage basins and geometry of channel networks. The influence of spatial variability in rainfall patterns has also been shown to affect the outcome of long-term topographic evolution \citep{solyom2007importance,Han2014}, as well as decadal--millenial scale studies that have investigate the role of rainfall resolution on sediment yields and morphological change in catchments \citep{coulthard2016sensitivity}. However, no study has yet looked at the sensitivity of erosion to rainfall spatial patterns in single storm events -- the goal of this chapter is to investigate the potential sensitivity of catchment-scale erosional processes to spatially distributed rainfall inputs.
 
-Rainfall resolution has been demonstrated to exert a control over sediment yields over seasonal and decadal timescales \citep{coulthard2016sensitivity}. In a numerical modelling study of the River Swale catchment, Coulthard and Skinner show that local as well as catchment-wide sediment yields were predicted to increase by orders of magnitude as rainfall data resolution increases. The study looked at the effects of rainfall spatial data resolution as well the temporal resolution of data, showing both to demonstrate a control over sediment fluxes in a catchment. The study focused on landscape evolution time scales of decades to centuries, rather than individual storm events, and in this study this gap at the shorter end of the catchment evolution time scale will be filled. 
+% A clear relationship between rainfall intensity, flood magnitude, and erosional dynamics is not always observed in case studies (Anton 2012), suggesting that the links between precipitation, hydrological response, and sediment transport are not yet fully understood.
+%
+%The behaviour of certain catchment processes also exhibits non-linearity in response to external forcings \citep{coulthard1998non,coulthard2007cellular}, which suggests why case studies do not always exhibit a clear scaling relationship between event magnitude and catchment response. T  Catchment-scale erosional dynamics are complex, and except in the simplest cases depend on other forcings other than the magnitude of single flood events alone.  The understanding of hydrogeomorphic processes during single storm events is not only important for the long-term evolution of landscapes, 
 
+% More detail
+\subsection{Theory}
+The assumption of uniform rainfall over a river catchment is argued to hold true for small catchments \citep{Solyom2004,Tucker2010}, but even over small areas, mesoscale rainfall features, such as localised convective storm cells, can result in spatially and temporally uneven input of precipitation into the catchment. In the case of intense convective precipitation, individual storm cells can be as small as 10km$^2$ in areal extent  \citep{weisman1986characteristics,vonhardenberg2003shape}. Over larger catchments, or those with steep topographic gradients, precipitation is likely to vary spatially, due to orographic enhancement of rainfall \citep{Roe2003}. As such, rainfall-runoff generation, local river and tributary flow, and erosion rates may vary considerably within individual drainage basins. 
 
+As explored in Chapter \ref{chapter_landscape_evol}, current numerical models of landscape evolution usually omit a realistic distribution of rainfall input in favour of uniform, homogenised precipitation across the landscape. When precipitation is `lumped', either spatially or temporally in a catchment, local minima and maxima of precipitation are lost or smoothed-out, and with discharge being a function of rainfall rate, this smoothing propagates through to local discharges and erosion rates. The uncertainty in erosion rates is potentially exacerbated by the non-linearity and threshold dependence of erosive processes. The variability of precipitation is considered to be as important as total precipitation amount in determining erosional effectiveness \citep{Tucker2000,Tucker2010}. As many geomorphic processes are threshold dependent \citep{schumm1979geomorphic}, such as fluvial incision into bedrock \citep{sklar2001sediment,snyder2003importance}, there is potential for the spatial distribution of rainfall to control local erosion rates within a catchment. 
+%Non-linearity in geomorphic process laws \citep{coulthard1998non,phillips2003sources,coulthard2007cellular} should dictate that catchments are also geomorphically sensitive to the spatial distribution of rainfall. 
 
-%The intermediate stage between rainfall episode and geomorphic process is the hydrological response of the landscape. This is determined by a range of factors, includng antecedent conditions, bedrock and soil properties, vegetative cover, catchment morphology and the distribution of the rainfall across the catchment. Again, in numerical models of long term landscape evolution, these processes are parameterised for computational efficiency, generally through the selection of an appropriate rainfall-runoff model for the catchment (Beven). Most models of longer term landscape evolution assume a hydrological steady-state during each erosive event, and erosion is calculated as a function of peak or total discharge during a storm. Notable exceptions include the work of Solyom and Tucker (2004), where a parameterised non-steady state rainfall-runoff model is proposed to explain landscape evolution under condtions of short storm duration realtive to runoff time. 
-%Talk about some of the purely hydrologic studies that have used spatially varible dsitributed rainfall.
+Rainfall resolution has been demonstrated to exert a control over sediment yields over decadal and millennial timescales \citep{coulthard2016sensitivity}. In a numerical modelling study of the River Swale catchment, \citet{coulthard2016sensitivity} show that local distribution of erosion as well as catchment-wide sediment yields were predicted to increase by up to 100\% as rainfall data resolution was increased. The study looked at the effects of rainfall spatial data resolution as well the temporal resolution of data, showing both to demonstrate a control over sediment fluxes in a catchment. The study focused on landscape evolution time scales of decades to centuries, rather than individual storm events, and in this study this gap at the shorter end of the catchment evolution time scale will be filled. 
 
-As explored in Chapter \ref{chapter_landscape_evol} numerical models of landscape evolution usually omit a realistic distribution of rainfall input in favour of uniform, homogenised precipitation across the landscape. When precipitation is `lumped', either spatially or temporally in a catchment, local minima and maxima of precipitation are lost, and with discharge being a function of rainfall rate, this uncertainty propagates through to local discharges and erosion rates. The uncertainty in erosion rates is potentially exacerbated by the non-linearity and threshold dependence of erosive processes. The variability of precipitation is considered in many cases to be as important as total precipitation amount in determining erosional effectiveness \citep{Tucker2000,Tucker2010}.
+In numerical models of landscape evolution, resolving the precise temporal and spatial details of rain storms and the hydrological response is often computationally prohibitive, especially over long timescales, and as such modellers have taken to using simpler parameterisiations of storm characteristics, such as using simple stochastic models to generate rainfall inputs and rainfall timeseries \citep{Eagleson1978,Tucker2001}. In studies of long term landscape evolution, the sensitivity of landscapes to the spatial distribution of rainfall has been investigated to some extent -- particularly the imprint of orographic precipitation on landscapes \citep[e.g][]{Roe2002,Anders2008,Han2014}. In Chapter \ref{chapter_HAIL-CAESAR}, an existing landscape-evolution model was redeveloped to address some of the computational issues and make it suitable for deployment on a high-performance computing service, enabling more effective use of higher resolution digital topography data to initialise the terrain surface (Chapter \ref{chapter_events}) and finer-resolution rainfall input data to drive the model. 
 
-In numerical models of landscape evolution, resolving the precise temporal and spatial details of rain storms and the hydrological response is often computationally prohibitive, especially over long timescales, and as such modellers have taken to using simpler parametrisiations of storm characteristics, such as using simple stochastic models to generate rainfall inputs and rainfall timeseries \citep{Eagleson1978,Tucker2001}. In studies of long term landscape evolution, the sensitivity of landscapes to the spatial distribution of rainfall has been investigated to some extent -- particularly the imprint of orographic precipitation on landscapes \citep[e.g][]{Roe2002,Anders2008,Han2014}
-
-What is currently lacking in landscape evolution modelling studies is a fuller understanding of how landscapes erode during individual storms, and in particular how erosional processes are sensitive to the details of precipitation across a catchment. The focus in this chapter is to quantify the sensitivity of catchment-scale erosional processes to the spatial distribution of rainfall during flood events, using the case studies outlined in Chapter \ref{chapter_events}.
+\subsection{Objectives}
+The aim of this chapter is to assess how erosional processes are sensitive to the details of precipitation across a catchment during individual storms. The focus in this study is to quantify the sensitivity of catchment-scale erosional processes to the spatial distribution of rainfall during flood events, using the case studies outlined in Chapter \ref{chapter_events}.
 
 The following questions are explored through the use of numerical modelling simulations:
 
-\begin{itemize}
+\begin{enumerate}
 \item Are fluvial erosion and sediment transport processes sensitive to the details of precipitation distribution at the catchment scale during single storm events?
 \item Does the choice of erosional model operating within the catchment influence sensitivity to rainfall patterns? 
 \item What are the implications of this for longer term landscape evolution? 
-\end{itemize}
+\end{enumerate}
 
-
-To build on the work done in previous studies \citep[e.g.][]{coulthard2016sensitivity}, this chapter looks at the effects of individual severe rainfall events using a range of erosional end-member models. The study investigates the sensitivity of catchment-scale erosion to the spatial details of severe rain storms -- the agents of long term landscape evolution. Landscape response is investigated using a numerical landscape evolution model that incorporates a dynamic (non steady-state) water-routing component and a range of fluvial incision and sediment transport laws. A series of numerical simulations are presented to test how sensitive real landscapes are to the catchment-scale details of precipitation during intense rainfall events. The simulations are each based on selected severe storms in the UK occurring in the past decade, which left significant flooding, damage, and geomorphological change in their wake.
+To build upon the work done in previous studies \citep[e.g.][]{coulthard2016sensitivity}, this chapter looks at the effects of individual severe rainfall events using a range of erosional end-member models. The study investigates the sensitivity of catchment-scale erosion to the spatial details of severe rain storms -- the agents of long term landscape evolution. Landscape response is investigated using a numerical landscape evolution model that incorporates a dynamic water-routing component \citep{bates2010simple} and a range of fluvial erosion and sediment transport laws \citep{howard1983channel,wilcock2003surface,whipple1999dynamics}. A series of numerical simulations are presented to test how sensitive real landscapes are to the catchment-scale details of precipitation during intense rainfall events. The simulations are each based on selected severe storms in the UK occurring in the past decade, which left significant flooding, damage, and geomorphological change in their wake.
 
 %\section{Experiment design}
 %
@@ -154,20 +156,62 @@ The relationship between the spatial distribution of rainfall and the erosional 
 % Critical analysis of major findings.
 The findings in this study are based on simulating historic flash flood events using a cellular automaton  numerical model, the HAIL-CAESAR model (Chapter \ref{chapter_HAIL-CAESAR}). As such, the conclusions drawn from these experiments will be influenced by the individual characteristics of each catchment, though they were selected to be representative of typical upland catchments in the UK. It is expected that simulation of different catchments and events may produce somewhat different outcomes, but the overall findings should be applicable to other modelling situations. 
 
+\subsection{Sensitivity to erosion law and rainfall heterogeneity} 
 One key finding from the experiments, exhibited in both case studies, is that erosion law choice in the model is a more dominant control on sediment flux rather, rather than the spatial detail of precipitation. The erosion-enabled simulations in these experiments represented two end-members of sediment transport and erosion laws (As in Table \ref{table_ensemble_experiments}), transport-limited and detachment-limited. The transport-limited law simulations predict much greater sediment flux and erosion than their detachment-limited counterparts. In terms of sediment flux and erosion, the role of rainfall input data spatial resolution played only a secondary role in determining erosion amounts. The size of the catchment was less important in this respect, with even the smaller Boscastle catchment (18km\(^2\)) showing a marked sensitivity to the choice of erosion law. The sediment flux output from each catchment during the storm showed an order of magnitude difference between detachment and transport-limited erosion parameterisations, given the same rainfall spatial inputs. In contrast, the difference in sediment flux between uniform and gridded rainfall simulations was much smaller in both case study simulations.
 
 Despite this study showing choice of erosion law being the dominant factor in controlling sediment flux, the study does confirm previous reports of increased sediment outputs from simulations using spatially heterogeneous rainfall data to drive simulations. \citet{coulthard2016sensitivity} reported that using finer resolution rainfall data at 5km grid spacing (also derived from meteorological radar) resulted in a doubling of sediment yields from a similar sized upland catchment (415km\(^2\)). The key difference in their findings was that the result was observed after a much longer simulation time of 30 years, using a 10-year rainfall record looped three times over the course of the simulation. While the rainfall data used in \citet{coulthard2016sensitivity} contain maximum rainfall intensities approaching those observed in the Boscastle and Ryedale storms used here, it is not clear whether they were part of prolonged storms over catchment, or were merely brief, localised cloudbursts. In other words, it cannot be determined whether the increase in sediment output observed in the \citet{coulthard2016sensitivity} gridded rainfall simulations is due to a particular storm in the 10 year rainfall record, due to cumulative erosive effects of lower intensity but higher frequency rainfall events, or some combination of both. The work presented in this chapter suggests that rainfall heterogeneity, while it may account for slightly higher sediment yields in individual storms, does not necessarily reproduce the `order of magnitude' differences observed over longer simulations such as in \citet{coulthard2016sensitivity} that may feature multiple storm events. However, this apparent discrepency across timescales may be due to the specific characteristics of these particular storms studied -- other types of storm, different spatial distributions of rainfall, may produce different results.
 
+\subsection{Comparison with observed geomorphic change post-flood}
 
+The resulting geomorphic change from the Boscastle 2004 flood, and to a lesser extent, the Ryedale flood of 2005 were extensively surveyed in the aftermath of the flood. Both sets of simulations lacked a suitably high-resolution DEM representing the state of the catchment before the flood took place, so a detailed before and after assessment of the accuracy of the model predictions are not possible. However, comparison with the reports on the erosion and deposition with each catchment allow us to make an assessment of whether the simulations were in broad agreement with the observations recorded after each flash flood event.
 
+\subsubsection{Boscastle}
+The geomorphological changes from the Boscastle flood were extensively mapped and recorded in an Environment Agency commissioned report carried out by \citet{wallingford2005flooding}. The reported amount of downcutting within the main Valency river channel was 1--2 metres in places. The transport-limited simulations predicted  a similar magnitude of downcutting in places, but also tended to overestimate the amount of downcutting, predicting up to 4m in places, which was not confirmed by the \citet{wallingford2005flooding} report. The detachment-limited simulations typically underestimated the amount of erosion and downcutting, particularly in the upper tributaries of the catchment, where little to no erosion was predicted, yet ground surveys post-flood reported substantial erosion within the channels. 
 
-\section{Conclusion}
-Over long term landscape evolution, erosional processes in catchments are known to be sensitive to the spatial distribution of rainfall input.  This study has shown that catchment erosional processes are also sensitive to rainfall spatial distribution during the course of a single severe storm, and it is suggested that this is due to the spatial variation in shear stresses required brought on by heterogeneous rainfall inputs to the catchment system.  As sediment transport and erosional process are highly threshold dependent, this leads to erosional patterns that differ according to the pattern of rainfall input. In other words, in the simulation of landscape evolution processes at the catchment scale, the choice of whether to use a uniform value representing the rainfall input, or to use a spatially heterogeneous gridded rainfall data, can have a marked impact on the predicted sediment yields from the catchment. 
-In terms of sediment yields, however, these experiments have shown that it is the choice of erosional parameterisation in the model, and not necessarily the resolution of rainfall input data, that has a first-order control on the total sediment yields from a catchment and the magnitude of river channel incision during a simulated event.
+Substantial channel widening of up to 3--4m in places was reported in the HR Wallingford report. The HAIL-CAESAR model does not currently account for lateral channel erosion, and therefore there is no parameterisation of channel avulsion by lateral forces acting on the river bank in these simulations. The model allows a form of channel widening to take place through downcutting by water that has overtopped the channel banks, but this is not the primary mechanism through which channel widening occurs \citep{parker1976cause}. Future enhancements to the HAIL-CAESAR model would be needed to allow lateral channel widening to be investigated in the typical sense, similar to the implementations in \citet{murray1997properties,Coulthard2013}. The simulations presented in this chapter therefore do not reflect the channel widening reported in the post-flood geomorphological survey.
 
-Stuff amount rarity of events. Catastrophism.
+One area in which the gridded rainfall simulations performed better than the uniform rainfall inputs was in the tributaries in the south-east area of the catchment. The ground survey after the Boscastle flood noted significant amounts of erosion to in the tributaries on the south side of the river Valency. The tributary shown in Figure \ref{fig_boscastle_2dplan_erosion_ensemble_SE} was observed as having up to 1--2m of downcutting along its course. The gridded transport limited simulation more accurately predicted this than the corresponding uniform rainfall input simulations. It is notable that the regions of the catchment with the highest rainfall input -- mainly the southern and eastern fringes of the catchment -- fed into the tributaries that experienced the channel downcutting (see Figure \ref{fig_boscastle_rain_totals}). In this particular case it is evidence that high resolution of rainfall input data can better resolve the pattern of erosion on the ground.
+
+Deposition of sediment was noted along most sections of the lower reaches of the Valency floodplain. The transport-limited simulations predicted sediment deposition in the small floodplain areas immediately adjacent to he river channel, but substantially overpredicted the amount of sediment deposition in places, predicting as much as 2--3m of deposition. Ground surveys, while noting deposition of sediment in many places, reported sediment deposition on the order of centimetres, not metres. The overestimation of deposition was present in both the gridded and uniform rainfall simulations, reinforcing the conclusion that uncertainty in the choice and paramterisation of sediment transport law is a stronger controlling factor than the spatial heterogeneity of rainfall.
+
+Large sediment deposits were recorded after the event in the harbour area of Boscastle village \citep{wallingford2005flooding}. Notably, all simulations failed to predict this correctly, in fact predicting net sediment erosion in the harbour area (Figure \ref{fig_boscastle_2dplan_erosion_ensemble}, north-west corner). The discord between observations and model predictions in the harbour area may arise from the poor parameterisation of the interface where the catchment drains out into the sea in this area. The sea and tide in the harbour acting as a natural dampener to water flow velocities in reality, which would be expected to encourage deposition of sediments here.
+
+\subsubsection{Ryedale}
+
+Geomorphic change in the aftermath of the Ryedale was not as extensively surveyed compared to the Boscastle event. However, several studies noted general observations regarding the geomorphic impact of the event \citep{dong2006evaluation,wass2008investigation,hopkins2012knowledge}.
+Channel downcutting was substantial, with 2--3m reported in the upper tributaries of the Rye catchment \citep{wass2008investigation,hopkins2012knowledge}. This pattern of channel incision was generally captured in the transport-limited simulations of the Ryedale flood but not in the detachment-limited simulations which tended to under-predict channel incision in the upper reaches of the catchment. Sediment deposition was reported in the lower reaches of the catchment, particularly in the village of Helmsley, but was not mapped extensively, unlike the Boscastle case. The simulations show areas of sediment deposition and erosion on the orders of 0.5--3m around the Helmsley area and the surrounding flood plain. Photographic evidence \citep{dong2006evaluation,hopkins2012knowledge} however, suggests these predictions are somewhat over-estimates of the ammount of incision and deposition in the floodplain area around Helmsley.
+
+The Ryedale storm was noted for its triggering of over 100 shallow landslides within the catchment \citep{galiatsatos2007assessment,dong2006evaluation,
+wass2008investigation}. The treatment of landsliding in the HAIL-CAESAR model is simplistic, based on a simple critical slope threshold required to trigger landslides, and as a result the reported landslides went largely unpredicted by all of the simulations. More complex models of landsliding are able to account for the role of soil saturation and pore water pressure in triggering of shallow landslides \citep[e.g.][]{iverson2000landslide,crosta2003distributed}. 
 
 \subsection{Implications for longer-term landscape evolution}
-The experiments presented in this chapter have focused on the hydrogeomorphic response to single severe storm events, events which produced floods with return periods of 1 in 330 years (Ryedale) and 1 in 1300 years (Boscastle). The amounts of river channel incision predicted as a result of these storms is comparable to that predicted by studies of landscape evolution on scales of 1000 years, for example a study of a similar upland river basin by \citep{coulthard2016sensitivity} predicted channel incision amounts of 0.5--5m over 1000 years. The experiments presented here, using the same sediment transport law, predicts comparable incision amounts of channel incision during a single storm. If the flood return periods are assumed to be broadly correct, these simulations suggest that the majority of sediment erosion occurs during rare but high magnitude flood events, rather than through gradual processes or more frequent but lower magnitude events.
+The experiments presented in this chapter have focused on the hydrogeomorphic response to single severe storm events, events which produced floods with return periods of 1 in 330 years (Ryedale) and 1 in 1300 years (Boscastle). The amounts of river channel incision predicted as a result of these storms is comparable to that predicted by studies of landscape evolution on scales of 1000 years, for example a study of a similar upland river basin by \citep{coulthard2016sensitivity} predicted channel incision amounts of 0.5--5m over 1000 years. Ground surveys after both events \citep{wallingford2005flooding,dong2006evaluation} revealed somewhat lower channel incision amounts, though of the same order of magnitude (1--3m). The experiments presented here, using the same sediment transport law in the \citet{coulthard2016sensitivity} study, predict comparable amounts of channel incision during a single storm event. Previous studies of upland catchments in the UK that have experienced similar flash flood events have responded in a similar fashion \citep{johnson2002flooding,milan2012geomorphic}, showing catchment sediment fluxes far higher than typical for similar sized catchments \citep[e.g.][]{johnson2002annual}. If the flood return periods are assumed to be broadly correct, these simulations, along with previously published field studies, support the view that the majority of sediment erosion occurs during infrequent but high magnitude flood events, rather than through gradual processes or more frequent but lower magnitude events.
+
+               
+\subsection{Limitations}
+The findings in this study are based on the outcomes of numerical simulations and data that are naturally simplifications of real landscapes and real rainfall events. Testing the potential for the HAIL-CAESAR model to forecast erosive episodes during flash flooding is limited due to the lack of pre- and post-event digital terrain models, therefore, only generalised comparisons can be made about the model's predictive ability and the ground surveys of geomrophic change carried out after the events. 
+
+A number of assumptions were made about the catchment, due in part to the complexity and number of environmental processes parameterised in the numerical model. Sediment transport processes are driven by the overland flow of water, and are therefore sensitive to the choice of hydrological and hydraulic parameters. Hydrological parameters such as the TOPMODEL \(m\) parameter, or Manning's \(n\) are difficult to determine without extensive field calibration. In this study, reported values of from previous studies in similar catchments were used as guidance, and in the case of the TOPMODEL \(m\) parameter, sensitivity analysis was done (Chapter \ref{chapter_flood_model_sensitivity}) to determine the most appropriate value.   
+
+Certain types of geomorphic change that were reported in post-event ground studies, such as channel avulsion in the Boscastle flood, and landsliding in the Ryedale event, are only simplistically represented in the numerical model. The full range of catchment erosional processes, such as lateral river bank erosion and mass movement cannot be fully explored in terms of sensitivity to rainfall spatial distribution. Nonetheless, the model captures the essential components of landscape evolution (overland flow and sediment transport by water) and their sensitivity to rainfall spatial distribution within a river catchment.
+
+
+                       
+\section{Conclusion}
+The study was designed to test whether erosional processes in river catchments are sensitive to the spatial distribution of rainfall inputs, within the context of an individual severe storm.
+These experiments have shown that it is the choice of erosional parameterisation in the model, and not necessarily the resolution of rainfall input data, that has a first-order control on the total sediment yields from a catchment and the magnitude of river channel incision during a simulated event.
+
+Nevertheless, a further conclusion can also be made that rainfall spatial distribution does have an impact on sediment outputs and distribution of erosion in a catchment during an intense rainfall event, but in the cases shown here, it is a secondary control when compared to the choice and parameterisation of the erosion or sediment transport law. Where there is notable rainfall heterogeneity in a storm, spatially distributed rainfall data can be used to more accurately predict local variations in channel incision within the catchment, as was evident in the observed and predicted erosion patterns in the smaller Boscastle catchment.
+
+The study has touched upon whether landscape evolution models may be used for shorter-term forecasting tools to predict the impact of flash floods on the landscape, should predicting areas of channel erosion and deposition. There are still a number of limitations in current landscape erosion models that prevent them being used as tools with detailed predictive power, notably the sensitivity from the choice of sediment transport laws as highlighted above. Using rainfall radar data as input to the model also introduces a further source of potential error \ref{chapter_metdata}, which further compounds the uncertainty in the eventual prediction made by using a LEM in such a way to provide forecasts of landscape erosion in a single severe rainfall event. 
+
+The importance of high magnitude, low frequency storm events in being agents of longer term landscape evolution is reinforced by this study. The amounts of channel incision predicted by the model (and confirmed in previously published post-event surveys), shows that a single storm can have as much erosive impact as decades of higher frequency, lower magnitude events. If one were to extrapolate the differences in predictions from uniform and gridded rainfall inputs based on this study, the effect of rainfall spatial detail could not be said be said to play a primary role on longer term landscape evolution. However, cumulatively the small differences observed between uniform and gridded rainfall inputs to the model may become more pronounced over longer-term landscape evolution simulations. It is important to acknowledge that these findings are based in the context of individual events, and other factors and feedbacks may come into play over longer timescales.
+
+
+
+
+
+
+
 
 
