--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -41,15 +41,17 @@ Finally, a software framework is presented for driving a landscape evolution mod
 %as for the above example.
 
 \afterabstract
-
-% The next part is optional; however it is a good place to thank your
-% supervisor and the people responsible for providing computer support ;-)
-\prefacesection{Layperson's abstract}
-An optional section suggested by the UoM thesis preparation guide.
-
+%
+%% The next part is optional; however it is a good place to thank your
+%% supervisor and the people responsible for providing computer support ;-)
+%\prefacesection{Layperson's abstract}
+%An optional section suggested by the UoM thesis preparation guide.
+%
 \prefacesection{Acknowledgements}
-Writing this thesis has been an exercise in sustained suffering. The casual reader may, perhaps, exempt themselves from excessive guilt, but for those of you who have played the larger role in prolonging my agonies with your encouragement and support, well…you know who you are, and I hope you get what you deserve.
-\\ \\
-My suffering was funded by the Natural Environment Research Council doctoral training grant number NE/L501591/1.
+%Writing this thesis has been an exercise in sustained suffering. The casual reader may, perhaps, exempt themselves from excessive guilt, but for those of you who have played the larger role in prolonging my agonies with your encouragement and support, well…you know who you are, and I hope you get what you deserve.
+
+I wish I could write that this PhD had been an enjoyable experience, but truth be told, on the whole it has been the most depressing, demoralising, and soul-destroying experience of my life. I would have quit several years ago, but carried on obstinately out of a vague notion of duty to those who have supported and encouraged me along the way. In all honesty, I regret doing this PhD and the years I have lost from undertaking it.
+%\\ \\
+The research project was funded by the Natural Environment Research Council doctoral training grant number NE/L501591/1.
 % The next line is NOT optional and MUST appear
 \afterpreface
