--- a/literature.bib
+++ b/literature.bib
@@ -1062,16 +1062,15 @@ pages = {227--258},
 title = {{Thresholds in river regimes}},
 year = {1980}
 }
-@article{Howard1983,
-author = {Howard, Alan D and Kerby, Gordon},
-doi = {10.1130/0016-7606(1983)94<739},
-file = {::;::},
-journal = {Geological Society of America Bulletin},
-number = {6},
-pages = {739--752},
-title = {{Channel changes in badlands}},
-volume = {94},
-year = {1983}
+@article{howard1983channel,
+  title={Channel changes in badlands},
+  author={Howard, Alan D and Kerby, Gordon},
+  journal={Geological Society of America Bulletin},
+  volume={94},
+  number={6},
+  pages={739--752},
+  year={1983},
+  publisher={Geological Society of America}
 }
 @phdthesis{Hu2002,
 author = {Hu, Yuanlong},
@@ -2839,6 +2838,12 @@ year = {2002}
   year={2012},
   school={Durham University}
 }
+@mastersthesis{dong2006evaluation,
+  title={Evaluation of high quality topographic data for geomorphological and flood impact studies in upland area: North York Moors, UK},
+  author={Dong, Lu},
+  year={2006},
+  school={Durham University}
+}
 @article{wass2008investigation,
   title={An investigation into the North Yorkshire floods of June 2005},
   author={Wass, P and Faulkner, D and Curini, A},
@@ -3307,6 +3312,185 @@ year = {2002}
   year={2003},
   publisher={Sage Publications}
 }
-
-
-
+@article{murray1997properties,
+  title={Properties of a cellular braided-stream model},
+  author={Murray, A Brad and Paola, Chris},
+  journal={Earth Surface Processes and Landforms},
+  volume={22},
+  number={11},
+  pages={1001--1025},
+  year={1997},
+  publisher={Wiley Online Library}
+}
+@article{parker1976cause,
+  title={On the cause and characteristic scales of meandering and braiding in rivers},
+  author={Parker, Gary},
+  journal={Journal of fluid mechanics},
+  volume={76},
+  number={03},
+  pages={457--480},
+  year={1976},
+  publisher={Cambridge Univ Press}
+}
+@article{johnson2002flooding,
+  title={Flooding and geomorphic impacts in a mountain torrent: Raise Beck, Central Lake District, England},
+  author={Johnson, Richard M and Warburton, Jeff},
+  journal={Earth Surface Processes and Landforms},
+  volume={27},
+  number={9},
+  pages={945--969},
+  year={2002},
+  publisher={Wiley Online Library}
+}
+@article{johnson2002annual,
+  title={Annual sediment budget of a UK mountain torrent},
+  author={Johnson, Richard M and Warburton, Jeff},
+  journal={Geografiska Annaler: Series A, Physical Geography},
+  volume={84},
+  number={2},
+  pages={73--88},
+  year={2002},
+  publisher={Wiley Online Library}
+}
+@article{iverson2000landslide,
+  title={Landslide triggering by rain infiltration},
+  author={Iverson, Richard M},
+  journal={Water resources research},
+  volume={36},
+  number={7},
+  pages={1897--1910},
+  year={2000},
+  publisher={Wiley Online Library}
+}
+@article{crosta2003distributed,
+  title={Distributed modelling of shallow landslides triggered by intense rainfall},
+  author={Crosta, GB and Frattini, P},
+  journal={Natural Hazards and Earth System Science},
+  volume={3},
+  number={1/2},
+  pages={81--93},
+  year={2003}
+}
+@article{milan2012geomorphic,
+  title={Geomorphic impact and system recovery following an extreme flood in an upland stream: Thinhope Burn, northern England, UK},
+  author={Milan, David J},
+  journal={Geomorphology},
+  volume={138},
+  number={1},
+  pages={319--328},
+  year={2012},
+  publisher={Elsevier}
+}
+@article{deluis2010rainfall,
+  title={Is rainfall erosivity increasing in the Mediterranean Iberian Peninsula?},
+  author={{De Luis}, M and Gonz{\'a}lez-Hidalgo, JC and Longares, LA},
+  journal={Land Degradation \& Development},
+  volume={21},
+  number={2},
+  pages={139--144},
+  year={2010},
+  publisher={Wiley Online Library}
+}
+@article{tucker1997drainage,
+  title={Drainage basin responses to climate change},
+  author={Tucker, Gregory E and Slingerland, Rudy},
+  journal={Water Resources Research},
+  volume={33},
+  number={8},
+  pages={2031--2047},
+  year={1997},
+  publisher={Wiley Online Library}
+}
+@article{rinaldo1995geomorphological,
+  title={Geomorphological signatures of varying climate},
+  author={Rinaldo, Andrea and Dietrich, William E and Rigon, Riccardo and Vogel, Gregor K and Rodriguez-Iturbe, Ignacio},
+  journal={Nature},
+  volume={374},
+  number={6523},
+  pages={632},
+  year={1995},
+  publisher={Nature Publishing Group}
+}
+@article{solyom2007importance,
+  title={The importance of the catchment area--length relationship in governing non-steady state hydrology, optimal junction angles and drainage network pattern},
+  author={S{\'o}lyom, Peter B and Tucker, Gregory E},
+  journal={Geomorphology},
+  volume={88},
+  number={1},
+  pages={84--108},
+  year={2007},
+  publisher={Elsevier}
+}
+@article{hancock2017sediment,
+  title={Sediment output from a post-mining catchment--Centennial impacts using stochastically generated rainfall},
+  author={Hancock, GR and Verdon-Kidd, D and Lowry, JBC},
+  journal={Journal of Hydrology},
+  volume={544},
+  pages={180--194},
+  year={2017},
+  publisher={Elsevier}
+}
+@article{coulthard2000modelling,
+  title={Modelling geomorphic response to environmental change in an upland catchment},
+  author={Coulthard, TJ and Kirkby, MJ and Macklin, MG},
+  journal={Hydrological Processes},
+  volume={14},
+  number={11-12},
+  pages={2031--2045},
+  year={2000},
+  publisher={Wiley Online Library}
+}
+@article{howard1994detachment,
+  title={A detachment-limited model of drainage basin evolution},
+  author={Howard, Alan D},
+  journal={Water resources research},
+  volume={30},
+  number={7},
+  pages={2261--2285},
+  year={1994},
+  publisher={Wiley Online Library}
+}
+@article{seidl1992problem,
+  title={The problem of channel erosion into bedrock},
+  author={Seidl, MA and Dietrich, WE},
+  journal={Functional geomorphology},
+  volume={23},
+  pages={101--124},
+  year={1992}
+}
+@article{whipple1999dynamics,
+  title={Dynamics of the stream-power river incision model: Implications for height limits of mountain ranges, landscape response timescales, and research needs},
+  author={Whipple, Kelin X and Tucker, Gregory E},
+  journal={Journal of Geophysical Research: Solid Earth},
+  volume={104},
+  number={B8},
+  pages={17661--17674},
+  year={1999},
+  publisher={Wiley Online Library}
+}
+@article{stock1999geologic,
+  title={Geologic constraints on bedrock river incision using the stream power law},
+  author={Stock, Jonathan D and Montgomery, David R},
+  journal={Journal of Geophysical Research. B},
+  volume={104},
+  pages={4983--4993},
+  year={1999}
+}
+@article{howard1998long,
+  title={Long profile development of bedrock channels: Interaction of weathering, mass wasting, bed erosion, and sediment transport},
+  author={Howard, Alan D},
+  journal={Rivers over rock: Fluvial processes in bedrock channels},
+  pages={297--319},
+  year={1998},
+  publisher={Wiley Online Library}
+}
+@article{sklar2006role,
+  title={The role of sediment in controlling steady-state bedrock channel slope: Implications of the saltation--abrasion incision model},
+  author={Sklar, Leonard S and Dietrich, William E},
+  journal={Geomorphology},
+  volume={82},
+  number={1},
+  pages={58--83},
+  year={2006},
+  publisher={Elsevier}
+}
